Moved land cover analysis to a new notebook. Also added slope analysis to said notebook.

--- a/is2_snowex_ak.ipynb
+++ b/is2_snowex_ak.ipynb
@@ -941,97 +941,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f81cd7d6-17b8-49af-a3b4-a2e6a520e343",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "## Match with Land Cover Data\n",
-    "As a last analysis, we are going to look at the lidar data relative to land cover data. We will use rasters from the National Land Cover Database (NLCD)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f355314-556c-4d35-9122-b12244b7530b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the NCLD raster\n",
-    "if (field_id=='cffl') | (field_id=='bcef') | (field_id=='cpcrw'):\n",
-    "    tiff = '/home/jovyan/icesat2-snowex/jsons-shps/land-cover-maps/fairbanks_nlcd_2016.tif'\n",
-    "elif (field_id=='acp') | (field_id=='trs'):\n",
-    "    tiff = '/home/jovyan/icesat2-snowex/jsons-shps/land-cover-maps/acp_nlcd_2016.tif'\n",
-    "else:\n",
-    "    print('No NLCD tiff found.')\n",
-    "    \n",
-    "land_cover = rio.open_rasterio(tiff)\n",
-    "\n",
-    "land_cover"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8a19f9c-6a5c-4957-8c53-4a377422b83f",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "Because we want to preserve the exact values, we will need to use a slightly different approach that involves saving the values to a text file. If the file already exists, then this step will be skipped, and only the land cover names will be added.\n",
-    "\n",
-    "Note that the coregistration and processing of the land cover data is covered by functions in \"ground_data_processing.py\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56b1de47-2cc6-4b46-9890-ed406d93657e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Check if land cover data already exists for the field site\n",
-    "fname = f'coregistered_nlcd_rgt{rgt}_{field_id}_{time_str}.txt'\n",
-    "if os.path.isfile(fname):\n",
-    "    print('Land cover data already exists.')\n",
-    "else:\n",
-    "    gdp.coregister_nlcd_data(atl03_uaf_filtered, land_cover, fname)\n",
-    "\n",
-    "atl03_uaf_nlcd = gdp.process_nlcd_data(atl03_uaf_filtered, fname)\n",
-    "\n",
-    "np.unique(atl03_uaf_nlcd['land_cover'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fbaf9d7-0e8d-451c-973e-b46b1d85170b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Make a boxplot grouping ICESat-2 snow depths by land cover\n",
-    "boxplot = atl03_uaf_nlcd.hvplot.box(y='residual', by='land_cover').opts(xlabel='Land Cover',\n",
-    "                                                                        ylabel='ICESat-2 snow depth [m]')\n",
-    "boxplot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efffb0db-c16d-4306-98a7-8ddddd085e7a",
-   "metadata": {
-    "tags": [],
-    "user_expressions": []
-   },
-   "source": [
-    "## Saving snow depth data\n",
-    "The final aim for this notebook is to develop an ICESat-2 snow depth \"product\" over the Alaska field sites. This is still very much a work in progress, but the section still allows for saving of derived snow depth data."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6f848d7e-1ab6-4bac-a554-500c8db0f446",
@@ -1040,19 +949,16 @@
    },
    "outputs": [],
    "source": [
-    "# Save derived snow depth data in .csv format\n",
-    "atl03_uaf_nlcd.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl06_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
-    "atl08_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')"
+    "# Save coregistered data in .csv format\n",
+    "if snow_on:\n",
+    "    atl03_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl03_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "    atl06_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl06_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "    atl08_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl08_snowdepth_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "elif not snow_on:\n",
+    "    atl03_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl03_snowoff_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "    atl06_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl06_snowoff_rgt{rgt}_{field_id}_{time_str}.csv')\n",
+    "    atl08_uaf_filtered.to_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_id}/atl08_snowoff_rgt{rgt}_{field_id}_{time_str}.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e85c8ae6-83fd-417e-b40e-d2752a05b74f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
