Added coding formatting to quick look notebook.

--- a/is2_quicklook_depths.ipynb
+++ b/is2_quicklook_depths.ipynb
@@ -9,11 +9,11 @@
    "source": [
     "# Estimating Snow Depth from ICESat-2 ATL08QL data\n",
     "\n",
-    "This script is made to derive preliminary snow depth estimates using the ATL08 Quick Look product. Because the quick looks are (a) subject to geolocation errors and (b) automatically deleted after the final data release, it is recommended to use \"is2_snowex_ak.ipynb\" if it has been ~45 days since the RGT of interest.\n",
+    "This script is made to derive preliminary snow depth estimates using the ATL08 Quick Look product. Because the quick looks are (a) subject to geolocation errors and (b) automatically deleted after the final data release, it is recommended to use `is2_snowex_ak.ipynb` if it has been ~45 days since the RGT of interest.\n",
     "\n",
     "icepyx normally does not support downloading of ATL08QL data, so a slightly altered version is required. The user may find a branch with ATL08QL functionality at: https://github.com/zachghiaccio/icepyx/tree/quick-looks. A pull request for this feature will be introduced to the icepyx development team in the near future.\n",
     "\n",
-    "When ATL08QL functionality is introduced to icepyx, it is planned to integrate this notebook with \"is2_snowex_ak.ipynb\".\n",
+    "When ATL08QL functionality is introduced to icepyx, it is planned to integrate this notebook with `is2_snowex_ak.ipynb`.\n",
     "\n",
     "As with the above notebook, snow-on/-off DEMs from the UAF airborne lidar are needed to run this script. Interested users should contact the original provider of the data (Chris Larsen, cflarsen@uaf.edu)."
    ]
@@ -1216,7 +1216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
