Added coding formatting to markdown cells in notebooks.

--- a/is2_snowex_ak.ipynb
+++ b/is2_snowex_ak.ipynb
@@ -60,16 +60,18 @@
   {
    "cell_type": "markdown",
    "id": "a1b95778-d39d-4726-8ff5-36d4caa32a62",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "### User Input\n",
     "\n",
     "Acceptable field site IDs over Alaska are:\n",
-    "* 'cffl': Creamer's Field/Farmer's Loop\n",
-    "* 'cpcrw': Caribou/Poker Creek Experimental Watershed\n",
-    "* 'bcef': Bonanza Creek Experimental Forest\n",
-    "* 'trs': Toolik Research Station\n",
-    "* 'acp': Arctic Coastal Plain (Deadhorse)\n",
+    "* `'cffl'`: Creamer's Field/Farmer's Loop\n",
+    "* `'cpcrw'`: Caribou/Poker Creek Experimental Watershed\n",
+    "* `'bcef'`: Bonanza Creek Experimental Forest\n",
+    "* `'trs'`: Toolik Research Station\n",
+    "* `'acp'`: Arctic Coastal Plain (Deadhorse)\n",
     "\n",
     "**NOTE**: Functionality for Caribou/Poker Creek and Toolik data is a work in progress."
    ]
