Figures 4 and 8 added to plotting notebook. All figure codes are added now.

--- a/is2_ak_plotting.ipynb
+++ b/is2_ak_plotting.ipynb
@@ -633,8 +633,53 @@
     "user_expressions": []
    },
    "source": [
-    "## Photon number plots\n",
-    "Same as the forest cover figure, but instead using the number of photons used in each SlideRule segment."
+    "## ATL06-SR Photon Filter Boxplots\n",
+    "Creates Figure 7 from Fair et al., (in prep). Generates boxplots of snow depth residuals as a function of photon filter. The filtering configurations are given below:\n",
+    "\n",
+    "* \"High, Ground\": High-confidence photons only, ATL08 ground photons only\n",
+    "* \"High, All\": High-confidence photons only, no ATL08 filter\n",
+    "* \"All, Ground\": No signal confidence filter (except noise), ATL08 ground photons only\n",
+    "* \"All, All\": No signal confidence filter (except noise), no ATL08 filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b2e6df-05c6-46da-aff6-083ac705c8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize DataFrames (FLCF)\n",
+    "dfsr_442010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_442010.csv')\n",
+    "dfsr_412010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_4-12010.csv')\n",
+    "dfsr_142010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_142010.csv')\n",
+    "dfsr_112010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_1-12010.csv')\n",
+    "\n",
+    "# Do the same for UKT\n",
+    "dfsr_utk_442010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/utk/atl06sr_snowdepth_rgt152_utk_2023331_442010.csv')\n",
+    "dfsr_utk_412010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/utk/atl06sr_snowdepth_rgt152_utk_2023331_4-12010.csv')\n",
+    "dfsr_utk_142010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/utk/atl06sr_snowdepth_rgt152_utk_2023331_142010.csv')\n",
+    "dfsr_utk_112010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/utk/atl06sr_snowdepth_rgt152_utk_2023331_1-12010.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a0f8ace-44dc-40aa-b6d6-1d33760608e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add photon filter as label for DataFrame (FLCF)\n",
+    "dfsr_442010['filter'] = 'High, Ground'\n",
+    "dfsr_142010['filter'] = 'All, Ground'\n",
+    "dfsr_412010['filter'] = 'High, All'\n",
+    "dfsr_112010['filter'] = 'All, All'\n",
+    "\n",
+    "# Do the same for UKT\n",
+    "dfsr_utk_442010['filter'] = 'High, Ground'\n",
+    "dfsr_utk_142010['filter'] = 'All, Ground'\n",
+    "dfsr_utk_412010['filter'] = 'High, All'\n",
+    "dfsr_utk_112010['filter'] = 'All, All'"
    ]
   },
   {
@@ -644,14 +689,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Round photon numbers to nearest multiple of 20\n",
-    "dfsr['n_fit_photons'] = round(dfsr['n_fit_photons']/20)*20\n",
+    "# Concatenate DataFrames\n",
+    "df_allfilters = pd.concat([dfsr_442010, dfsr_412010, dfsr_142010, dfsr_112010])\n",
+    "df_utk_allfilters = pd.concat([dfsr_utk_442010, dfsr_utk_412010, dfsr_utk_142010, dfsr_utk_112010])\n",
     "\n",
-    "# Generate weights for histogram plot\n",
-    "weights = np.ones_like(np.array(dfsr[dfsr['beam']==50]['n_fit_photons']))/float(len(np.array(dfsr[dfsr['beam']==50]['n_fit_photons'])))\n",
-    "\n",
-    "# Create new dataframe that groups residuals by photon count\n",
-    "new_df = dfsr[dfsr['beam']==50].reset_index().melt(id_vars=['n_fit_photons'], value_vars=['snow_depth_residual'])"
+    "# Melt DataFrames to sort them by photon filter (\"filter\")\n",
+    "df_allfilters_melt = df_allfilters.reset_index().melt(id_vars=['filter'], value_vars=['snow_depth_residual'])\n",
+    "df_utk_allfilters_melt = df_utk_allfilters.reset_index().melt(id_vars=['filter'], value_vars=['snow_depth_residual'])"
    ]
   },
   {
@@ -663,32 +707,34 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 2, figsize=(12,6))\n",
-    "# Histogram plot\n",
-    "sns.histplot(data=dfsr[dfsr['beam']==50], x='n_fit_photons', ax=ax[0],\n",
-    "             bins=[20, 40, 60, 80, 100, 120, 140, 160, 180, 200],\n",
-    "             weights=weights)\n",
-    "#ax[0].set_xlim([0, 80])\n",
-    "ax[0].set_ylim([0, 0.35])\n",
-    "ax[0].set_xlabel('Number of fitted photons', fontsize=14)\n",
-    "ax[0].set_ylabel('Frequency [%]', fontsize=14)\n",
-    "ax[0].set_xticks([20, 40, 60, 80, 100, 120, 140, 160, 180, 200])\n",
-    "ax[0].yaxis.grid(True)\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(14,8), sharex=True)\n",
     "\n",
-    "# Boxplot\n",
-    "sns.boxplot(data=new_df, x='n_fit_photons', y='value', ax=ax[1], color='C0')\n",
-    "ax[1].set_title(' ')\n",
-    "ax[1].set_ylim([-0.7, 0.7])\n",
-    "ax[1].set_xlabel('Number of fitted photons', fontsize=14)\n",
-    "ax[1].set_ylabel('IS2-UAF depth residual [m]', fontsize=14)\n",
+    "## FLCF Boxplot\n",
+    "#----------------#\n",
+    "sns.boxplot(ax=ax[0], data=df_allfilters_melt, x='filter', y='value')\n",
+    "ax[0].set_ylim([-1, 1])\n",
+    "ax[0].set_xlabel(' ', fontsize=16)\n",
+    "ax[0].set_ylabel('IS2-UAF depth residual [m]', fontsize=16)\n",
+    "ax[0].set_title(\"Creamer's Field\", fontsize=14)\n",
+    "ax[0].tick_params(axis='both', which='major', labelsize=14)\n",
+    "ax[0].grid(True)\n",
+    "\n",
+    "## UKT Boxplot\n",
+    "#----------------#\n",
+    "sns.boxplot(ax=ax[1], data=df_utk_allfilters_melt, x='filter', y='value')\n",
+    "ax[1].set_ylim([-1, 1])\n",
+    "ax[1].set_xlabel(' ')\n",
+    "ax[1].set_ylabel(' ')\n",
+    "ax[1].set_title(\"Upper Kuparuk/Toolik\", fontsize=14)\n",
+    "ax[1].tick_params(axis='both', which='major', labelsize=14)\n",
     "ax[1].grid(True)\n",
-    "ax[1].set_xticks([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
-    "ax[1].set_xticklabels([20.0, 40.0, 60.0, 80.0, 100.0, 120.0, 140.0, 160.0, 180.0, 200.0])\n",
-    "#ax[1].set_ylim([-1, 0.5])\n",
-    "ax[1].set_xlim([-0.5, 10.5])\n",
-    "fig.tight_layout()\n",
-    "#plt.suptitle(\"Creamer's Field\", fontsize=14)\n",
-    "#plt.savefig('/home/jovyan/icesat2-snowex/figures/bcef/is2_uaf_number-photon-plots_rgt472_bcef_2022423.png', dpi=500)"
+    "\n",
+    "fig.supxlabel('Signal confidence, ATL08 class [m]', fontsize=16)\n",
+    "t1 = ax[0].text(-0.4, -0.95, '(a)', fontsize=24)\n",
+    "t1.set_bbox(dict(facecolor='white', alpha=0.75, edgecolor='white'))\n",
+    "t2 = ax[1].text(-0.4, -0.95, '(b)', fontsize=24)\n",
+    "t2.set_bbox(dict(facecolor='white', alpha=0.75, edgecolor='white'))\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -698,8 +744,69 @@
     "user_expressions": []
    },
    "source": [
-    "## SlideRule segment plots\n",
-    "Figures using SlideRule data of differing resolution, segment length, etc. Currently a work in progress."
+    "## SNOTEL Time Series\n",
+    "Creates Figure 4 from Fair et al., (in prep). Plots SNOTEL snow depths over time, with the acquisition dates of UAF and ICESat-2 also given."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4acdef8a-729f-4917-85c3-bc25b861f786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read UKT SNOTEL data\n",
+    "ukt = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/station-data/imnaviat-creek-annual-snow-depth-plot.csv')\n",
+    "ukt_2023 = ukt['2022-2023']\n",
+    "ukt_2023_df = pd.DataFrame({'daynum':ukt_2023.index+1, 'snow_depth_meters': ukt_2023.values*0.0254})\n",
+    "\n",
+    "# Read FLCF SNOTEL data\n",
+    "cffl = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/station-data/snotel_cffl_2022-2023.csv')\n",
+    "cffl['year-month'] = pd.to_datetime(cffl['Date']).dt.strftime('%Y-%m')\n",
+    "cffl_mar22 = cffl[cffl['year-month']=='2022-03']\n",
+    "cffl_mar22['snow_depth_meters'] = cffl_mar22['SNWD.I-1 (in) ']*0.0254\n",
+    "\n",
+    "# Add year-month-day to DataFrames\n",
+    "ukt_2023_df['year-month-day'] = pd.to_datetime(ukt_2023_df['daynum'], unit='D', origin=pd.Timestamp('2022-09-01'))\n",
+    "ukt_2023_df['year-month'] = pd.to_datetime(ukt_2023_df['year-month-day']).dt.strftime('%Y-%m')\n",
+    "ukt_mar2023_df = ukt_2023_df[ukt_2023_df['year-month']=='2023-03']\n",
+    "cffl_mar22['year-month-day'] = pd.to_datetime(cffl_mar22['Date']).dt.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f78b1a-b893-4c59-b81f-3e3313878c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the relevant UAF data\n",
+    "uaf_cffl = rxr.open_rasterio('/home/jovyan/icesat2-snowex/lidar-dems/farmersloop_2022mar11_snowdepth_3m.tif')\n",
+    "uaf_ukt = rxr.open_rasterio('/home/jovyan/icesat2-snowex/lidar-dems/UKT_2023mar13_snowdepth_3m.tif')\n",
+    "\n",
+    "# Load the relevant ICESat-2 data\n",
+    "is2_cffl = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_444020.csv')\n",
+    "is2_ukt = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/utk/atl06sr_snowdepth_rgt152_utk_2023331_444020.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20beb24f-eaa1-4c41-9396-356ed843ab6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute median bias, NMAD for UAF snow depth\n",
+    "uaf_cffl_median = uaf_cffl.where(uaf_cffl>0).median()\n",
+    "uaf_ukt_median = uaf_ukt.where(uaf_ukt>0).median()\n",
+    "uaf_cffl_nmad = 1.4826*mad(uaf_cffl.where(uaf_cffl>0).values.ravel(), nan_policy='omit')\n",
+    "uaf_ukt_nmad = 1.4826*mad(uaf_ukt.where(uaf_ukt>0).values.ravel(), nan_policy='omit')\n",
+    "\n",
+    "# Do the same for ICESat-2\n",
+    "is2_cffl_median = is2_cffl[is2_cffl['beam']==50]['is2_snow_depth'].median()\n",
+    "is2_ukt_median = is2_ukt[is2_ukt['beam']==10]['is2_snow_depth'].median()\n",
+    "is2_cffl_nmad = 1.4826*mad(is2_cffl[is2_cffl['beam']==50]['is2_snow_depth'])\n",
+    "is2_ukt_nmad = 1.4826*mad(is2_ukt[is2_ukt['beam']==10]['snow_depth_residual'])"
    ]
   },
   {
@@ -711,15 +818,45 @@
    },
    "outputs": [],
    "source": [
-    "dfsr_142010 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/acp/atl06sr_snowdepth_rgt1097_acp_202234_142010.csv')\n",
-    "dfsr_4410050 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/acp/atl06sr_snowdepth_rgt1097_acp_202234_4410050.csv')\n",
-    "dfsr_44105 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/acp/atl06sr_snowdepth_rgt1097_acp_202234_44105.csv')\n",
-    "dfsr_444020 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/acp/atl06sr_snowdepth_rgt1097_acp_202234_444020.csv')\n",
+    "fig, axs = plt.subplots(1,2, figsize=(9, 6))\n",
     "\n",
-    "dfsr_142010['is2_snow_off'] = dfsr_142010['is2_height'] - dfsr_142010['lidar_snow_depth']\n",
-    "dfsr_4410050['is2_snow_off'] = dfsr_4410050['is2_height'] - dfsr_4410050['lidar_snow_depth']\n",
-    "dfsr_44105['is2_snow_off'] = dfsr_44105['is2_height'] - dfsr_44105['lidar_snow_depth']\n",
-    "dfsr_444020['is2_snow_off'] = dfsr_444020['is2_height'] - dfsr_444020['lidar_snow_depth']"
+    "## UKT Time Series\n",
+    "#----------------#\n",
+    "axs[0].plot(ukt_mar2023_df['year-month-day'], ukt_mar2023_df['snow_depth_meters'], color='black')\n",
+    "axs[0].errorbar(pd.to_datetime('2023-03-13'), uaf_ukt_median, \n",
+    "                yerr=uaf_ukt_nmad, fmt='o', capsize=4, color='orange')\n",
+    "axs[0].errorbar(pd.to_datetime('2023-03-31'), is2_ukt_median, \n",
+    "                yerr=is2_ukt_nmad, fmt='o', capsize=4, color='blue')\n",
+    "axs[0].set_xticks(['2023-03-01', '2023-03-15', '2023-03-31'])\n",
+    "axs[0].tick_params(axis='both', which='major', labelsize=12)\n",
+    "#axs[0].axvline(x=pd.to_datetime('2023-03-13'), ls='--', lw=3, color='orange')\n",
+    "#axs[0].axvline(x=pd.to_datetime('2023-03-31'), ls='--', lw=3)\n",
+    "axs[0].text(pd.to_datetime('2023-03-21'), 0.31, 'ICESat-2\\noverpass', fontsize=16)\n",
+    "axs[0].text(pd.to_datetime('2023-03-14'), 0.38, 'UAF\\nflight', fontsize=16)\n",
+    "axs[0].annotate(\"(a)\", (pd.to_datetime('2023-03-01'), 0.26), fontsize=16, bbox=dict(facecolor='white', alpha=0.7))\n",
+    "axs[0].grid(alpha=0.5)\n",
+    "axs[0].set_ylim([0.25, 0.625])\n",
+    "axs[0].set_ylabel('SNOTEL snow depth [m]', fontsize=18)\n",
+    "axs[0].set_title('Upper Kuparuk/Toolik', fontsize=16)\n",
+    "\n",
+    "## FLCF Time Series\n",
+    "#----------------#\n",
+    "axs[1].plot(pd.to_datetime(cffl_mar22['year-month-day']), cffl_mar22['snow_depth_meters'], color='black')\n",
+    "axs[1].errorbar(pd.to_datetime('2022-03-11'), uaf_cffl_median, \n",
+    "                yerr=uaf_cffl_nmad, fmt='o', capsize=4, color='orange')\n",
+    "axs[1].errorbar(pd.to_datetime('2022-03-21'), is2_cffl_median, \n",
+    "                yerr=is2_cffl_nmad, fmt='o', capsize=4, color='blue')\n",
+    "axs[1].set_xticks(['2022-03-01', '2022-03-15', '2022-03-31'])\n",
+    "axs[1].tick_params(axis='both', which='major', labelsize=12)\n",
+    "#axs[1].axvline(x=pd.to_datetime('2022-03-11'), ls='--', lw=3, color='orange')\n",
+    "#axs[1].axvline(x=pd.to_datetime('2022-03-21'), ls='--', lw=3)\n",
+    "axs[1].text(pd.to_datetime('2022-03-22'), 0.88, 'ICESat-2\\noverpass', fontsize=16)\n",
+    "axs[1].text(pd.to_datetime('2022-03-12'), 0.82, 'UAF\\nflight', fontsize=16)\n",
+    "axs[1].annotate(\"(b)\", (pd.to_datetime('2022-03-01'), 0.657), fontsize=16, bbox=dict(facecolor='white', alpha=0.7))\n",
+    "axs[1].grid(alpha=0.5)\n",
+    "axs[1].set_ylim([0.65, 1])\n",
+    "axs[1].set_title(\"Farmer's Loop/Creamer's Field\", fontsize=16)\n",
+    "plt.tight_layout()"
    ]
   }
  ],
