Made along-track plotting code more generic to plot either FLCF or UKT.

--- a/is2_ak_plotting.ipynb
+++ b/is2_ak_plotting.ipynb
@@ -60,11 +60,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7a49b7b6-687f-476b-8c91-2500a371bde5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1748b3d5-5223-428b-a532-4941f5091d4e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Creamer's Field Snow Depths"
+    "# Choose the field site to work with: Toolik (UKT) or Creamer's Field (FLCF)\n",
+    "field_site = 'flcf' # ukt or flcf\n",
+    "\n",
+    "# Generate date string and ICESat-2 RGT, based on site\n",
+    "if field_site == 'flcf':\n",
+    "    date_str = '2022321'\n",
+    "    rgt = '1356'\n",
+    "elif field_site == 'ukt':\n",
+    "    date_str = '2023331'\n",
+    "    rgt = '152'\n",
+    "else:\n",
+    "    raise ValueError(\"Invalid site code. Use either 'flcf' or 'ukt'.\")"
    ]
   },
   {
@@ -75,9 +88,9 @@
    "outputs": [],
    "source": [
     "# Read the co-located ICESat-2/UAF data\n",
-    "dfsr = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06sr_snowdepth_rgt1356_cffl_2022321_442010.csv')\n",
-    "df06 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl06_snowdepth_rgt1356_cffl_2022321.csv')\n",
-    "df08 = pd.read_csv('/home/jovyan/icesat2-snowex/snow-depth-data/cffl/atl08_snowdepth_rgt1356_cffl_2022321.csv')\n",
+    "dfsr = pd.read_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_site}/atl06sr_snowdepth_rgt{rgt}_{field_site}_{date_str}_442010.csv')\n",
+    "df06 = pd.read_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_site}/atl06_snowdepth_rgt{rgt}_{field_site}_{date_str}.csv')\n",
+    "df08 = pd.read_csv(f'/home/jovyan/icesat2-snowex/snow-depth-data/{field_site}/atl08_snowdepth_rgt{rgt}_{field_site}_{date_str}.csv')\n",
     "\n",
     "# Remove filler values from depth data\n",
     "dfsr['lidar_snow_depth'][dfsr['lidar_snow_depth']>2] = np.nan\n",
